--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activities.SplashActivity"
+        <activity
+            android:name=".ui.activities.SplashActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -17,6 +18,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activities.LoggingActivity">
+        </activity>
+        <activity android:name=".ui.activities.CatalogsActivity">
         </activity>
     </application>
 
