--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
+        android:name=".CashControlApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_cash_96"
         android:label="@string/app_name"
